--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-query": "^3.39.3",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
