--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-redux": "^7.1.25",
     "@types/yup": "^0.32.0",
     "formik": "^2.4.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
